--- a/docs/team/joshuaseetss.adoc
+++ b/docs/team/joshuaseetss.adoc
@@ -26,7 +26,7 @@ image::../images/Ui.png[width="602"]
 == Role
 
 My main role was to prototype and develop the Shortcut feature and the Income feature.
-The shortcut feature required handling unknown command words that are not recognized by FinSec. Instead of throwing an error when the user inputs an invalid command, FinSec is able give the user an option if he wanted to use that wrongly input command as an existing command, thereby creating an alias for the default commands for increased user experience.
+The shortcut feature required handling unknown command words that are not recognized by FinSec. Instead of throwing an error when the user inputs an invalid command, FinSec is able to give the user an option if he wanted to use that wrongly input command as an existing command, thereby creating an alias for the default commands for increased user experience.
 I created the base classes to facilitate these features, then linked it to the Model and Storage components since the shortcuts created and income entries have to be saved for future use. I also wrote rigorous tests for quality assurance of our product and to ensure that any possible bugs are kept to a minimal.
 
 
