--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -259,7 +259,7 @@ Step 1. Type `account overview` in the command textfield input.
 image::accountOverview_2.png[]
 Step 2. Successful message displayed, and you can navigate to the exports folder in the same directory of the source file.
 
-image::accountOverview_3.png[]
+image::AccountOverview_3.png[]
 
 image::accountOverview4.png[]
 Step 3. Open the html file in the exports folder to see the overview of all accounts.
