--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -390,8 +390,8 @@ image::addevent_wysd.png[width="450"]
 
 *What you should see*
 
-If successfully added, the result box (red box) will display message "_Event created:_" followed by the name
-of the event you just added, as shown in the diagram below.
+If successfully added, the result box will display message "_Event created:_" followed by the name
+of the event you just added, as shown in the red box in the diagram below.
 
 Additionally, the feature box (orange box) will display the list of all your events. The event you just
 added should be included in the list. In the example below, `freestyle 50m` appears at the bottom of the list.
@@ -418,8 +418,8 @@ image::deleteevent_wysd.png[width="450"]
 
 *What you should see*
 
-If successfully deleted, the result box (red box) will display the message "_Deleted event:_" followed by
-the name of the event you just deleted, as shown in the diagram below.
+If successfully deleted, the result box will display the message "_Deleted event:_" followed by
+the name of the event you just deleted, as shown in the red box in the diagram below.
 
 Additionally, the feature box (orange box) will show the current list of events you have in Athletick. The
 deleted event should not appear in the list.
@@ -431,7 +431,12 @@ image::deleteevent_wyss.png[width="450"]
 
 This command records your athlete’s performance for a certain event, on a certain day, to Athletick.
 
-You will need the event name, athlete’s index, date of record and timing of record.
+You will need the following details to add a record.
+
+* Athlete's index
+* Event name
+* Date of record
+* Timing of record
 
 NOTE: The event has to be created first. Otherwise, Athletick will prompt you to create that event.
 
@@ -451,18 +456,21 @@ image::addrecord_wysd.png[width=450]
 
 *What you should see*
 
-If successfully added, the result box will display the details of the record you just added.
+If successfully added, the result box will display the details of the record you just added, as shown in
+the diagram below.
 
-In the diagram below, the details of Tao Li's record - event, date and timing - are displayed in the
-success message.
-
+.Details of Tao Li's new record - event, date and timing - are displayed in the result box.
 image::addrecord_wyss.png[width=450]
 
 ==== Deleting an athlete's record : `delete -r`
 
 This command removes an athlete's record for a certain event, on a certain day, from Athletick.
 
-You will need the event name, athlete's index and date of record.
+You will need the following details to delete a record.
+
+* Athlete's index
+* Event name
+* Date of record
 
 Let's say that you want to delete Tao Li's record for the freestyle 50m event on 2nd November 2019.
 
@@ -479,11 +487,10 @@ image::deleterecord_wysd.png[width=450]
 
 *What you should see*
 
-If successfully deleted, the result box will display the details of the record you just deleted.
+If successfully deleted, the result box will display the details of the record you just deleted, as shown
+in the diagram below.
 
-In the diagram below, the details of Tao Li's deleted record - event and date - are displayed in
-the success message.
-
+.Details of Tao Li's deleted record - event and date - are displayed in the result box.
 image::deleterecord_wyss.png[width=450]
 
 ==== Viewings events : `view performance`
