--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -53,7 +53,7 @@ Universal commands are displayed first. Tab-specific commands are organised acco
 tabs that they belong to.
 
 ====
-*General Command Format Tabs*
+*General Command Format for All Tabs*
 
 * Highlighted words, like `add n/John Doe` or `add n/NAME` indicate that they can be entered into the Command Box.
 * Words in `UPPER_CASE` are the parameters to be supplied by the user e.g. in `add n/NAME`, `NAME` is a parameter which can be used as `add n/John Doe`.
@@ -62,11 +62,11 @@ tabs that they belong to.
 * Parameters can be in any order e.g. if the command specifies `n/NAME p/PHONE_NUMBER`, `p/PHONE_NUMBER n/NAME` is also acceptable.
 ====
 
-== Universal Commands For All Tabs
+== Universal Commands for All Tabs
 
 These are commands available for use in the Command Box for all tabs.
 
-=== Navigation between tabs
+=== Navigation Between Tabs
 Command: `go TAB`
 
 This command allows you to navigate between tabs.
@@ -80,12 +80,17 @@ This command allows you to navigate between tabs.
 
 Alternatively, you may also choose to click the tabs to switch to them.
 
-=== Exit the application
+=== Exiting the Application
 Command: `exit`
 
 This command allows you to exit the application immediately.
-Alternatively, you may also click the `x` button on the top right (for Windows/Linux) or
-top left (for macOS) to close the application.
+Alternatively, you may also click the `x` button on the top right (for Windows/Linux) or top left (for macOS) to close
+the application.
+
+=== Undo/Redo the Last Command `[coming in v2.0]`
+Command: `undo` or `redo`
+
+This command allows you undo/redo the last command.
 
 == Application Tab Specific Commands
 
@@ -109,8 +114,8 @@ it adds money to the club's funds).
 from the club's funds).
 
 [WARNING]
-There is a limitation to the amount that you may enter which would be -999999.99 to 999999.99. If more decimal points
-are entered, it will be rounded off to the nearest 2 decimal point.
+The amount you may enter is limited to -999999.99 to 999999.99. If more decimal points are entered, it will be rounded
+off to 2 decimal points.
 
 ====
 
@@ -125,13 +130,13 @@ This command allows you to add a transaction to the table and saves it into the 
 
 [NOTE]
 The format of the date has to be in dd-MMM-yyyy format and is case-sensitive. (Eg. 24-Aug-2019 or 03-Sep-2019)
-The person must be someone recorded in the Members Tab and is case-sensitive.
+The person specified must already exist in the Members tab and is case-sensitive.
 
 [WARNING]
 If you are adding a transaction meant to represent sales revenue, the transaction *must* be positive-valued
 and under the "Sales" category for it to show up in the Overview Tab correctly.
-If you are adding a transaction that is considered a spending which requires reimbursement to the member, the transaction *must* be negative-valued for it
-to show up in Reimbursements Tab.
+If you are adding a transaction that is considered a spending which requires reimbursement to the member, the transaction
+*must* be negative-valued for it to show up in Reimbursements tab automatically.
 
 * Steps
 
@@ -147,46 +152,37 @@ will be shown in the table. This is shown in the screenshot below:
 //.Screenshot of a successful user input for Add Command in Home Tab
 image::homeUG/HomeAddStep2cr.png[]
 
-
 [[NoSuchPerson]]
-If the person's name does not exactly match a current member in the Members Tab, Leo will respond with an error and the transaction
-record will not be added.
+If the person's name does not exactly match a current member in the Members Tab, Leo will respond with an error and the
+transaction record will not be added.
 
 [NOTE]
-In addition, there is no character limitations to
-the description or category entered. If the words are truncated, the columns in the table can be expanded by dragging the
-right border of the column. Just be careful not to resize the column too much that it exceeds the window which would require
-closing treasurerPro to restore back to original. Alternatively, you may click on the row to have the full details of the
-transaction displayed as
-a response from Leo.
-
-////
-This is shown in the screenshot below:
-
-.Screenshot of an unsuccessful user input for Add Command in the Home Tab due to an invalid name
-
-image::homeUG/HomeAddUnsuccessfulStep2cr.png[]
-////
+There is no character limit for the description or category. If the words appear truncated, the columns in the table can
+be expanded by dragging the right border of the column. Just be careful not to resize the column to the point that it
+exceeds the width of the window, which would require restarting treasurerPro to restore the column back to the original
+size. Alternatively, you may click on the row to have the full details of the transaction displayed as a response from
+Leo.
 
 After step 2, if the added transaction contains a negative amount (indicating an expenditure), a corresponding entry will
-automatically be shown in the Reimbursement Tab, tagged to the member who spent it.
+automatically be shown in the Reimbursement tab, tagged to the member who spent it. +
 Since reimbursements are aggregated by member, if the member already has other outstanding reimbursements,
-it will simply be added to his existing row. This is shown in the screenshot below:
+it will simply be added to his existing row. +
+This is shown in the screenshot below:
 
 //.Screenshot of the Reimbursement Tab after successfully adding a transaction
-image::homeUG/HomeAddShowInR.png[width = "400"]
-
+image::homeUG/HomeAddShowInR.png[width = "700"]
 
 ==== To Delete Transactions in the Home Tab
-This command allows you to delete either all transactions of a person or a single transaction of a specific ID from the table.
+This command allows you to delete either all transactions of a person or a single transaction of a specific ID from the
+table.
 
 * Command
 `delete ID` or `delete p/PERSON`
 
 * Examples
-** Delete by ID: [blue]`delete 1` - Deletes the transaction at the index shown in the table. If the table shows a filtered
-list of transactions due to the Find Command detailed in <<findCommandHome, Section 5.1.5 To Find Transactions that Match Keywords in the Home Tab>>,
-the 1st transaction in the filtered list is deleted.
+** Delete by ID: [blue]`delete 1` - Deletes the transaction at the index shown in the table. If the table shows a
+filtered list of transactions due to the Find command detailed in <<findCommandHome, Section 5.1.5 To Find Transactions
+that Match Keywords in the Home Tab>>, the 1st transaction in the filtered list is deleted.
 ** Delete by Person: [blue]`delete p/Alex Yeoh` - Deletes all transactions of the person in full list of transactions.
 
 * Steps for Deleting by ID:
@@ -195,35 +191,29 @@ the 1st transaction in the filtered list is deleted.
 //.Screenshot of the user input into Command Box for Delete by ID command in Home tab
 image::homeUG/HomeDeleteStep1cr.png[]
 
-
 [start = 2]
 2. Hit `Enter`. Leo will respond with a success message and the transaction will be removed from the table as shown below:
 
 .Screenshot of a successful user input for Delete by ID Command in Home Tab
 image::homeUG/HomeDeleteStep2cr.png[]
 
-
 * Steps for Deleting by Person:
 1. Type the command with the person's name to delete all transactions related to that person, as shown in the screenshot below:
-
 
 //.Screenshot of a user input into Command Box for Delete by ID command in Home Tab
 image::homeUG/HomeDeletePStep1cr.png[]
 
 [start = 2]
-2. Hit `Enter`. Leo will respond with the success message and the transaction(s) will be removed from the table as shown below:
+2. Hit `Enter`. Leo will respond with a success message and the transaction(s) will be removed from the table as shown
+in the screenshot below:
 
 //.Screenshot of a successful user input for Delete by Person Command in Home Tab
 image::homeUG/HomeDeletePStep2cr.png[]
 
-For both delete commands, if the transaction(s) deleted was part of a pending reimbursement record, it will also be removed from that
-reimbursement record. On the other hand, if the person entered is not part of our database as shown in the Members Tab,
-Leo will respond with a message to inform you.
-////
-as shown in the screenshot below:
-
-image::homeUG/HomeAddUnsuccessfulStep2cr.png[width = "500"]
-////
+For both Delete commands, if the transaction(s) deleted was part of a pending reimbursement record, it will also be
+removed from that reimbursement record. +
+On the other hand, if the person entered is not part of our database as shown
+in the Members Tab, Leo will respond with a message to inform you. +
 If the person does not have any transactions, Leo will also respond with a message to inform you.
 
 ==== To Edit a Transaction in the Home Tab
@@ -238,7 +228,7 @@ include at least one.
 
 * Examples:
 ** [blue]`edit 1 p/Bernice Yu dt/23-Aug-2019` - Edits the transaction at the index shown in the table. If the table shows a filtered
-list of transactions due to the Find Command detailed in <<findCommandHome, Section 5.1.5 To Find Transactions that Match Keywords in the Home Tab>>,
+list of transactions due to the Find command detailed in <<findCommandHome, Section 5.1.5 To Find Transactions that Match Keywords in the Home Tab>>,
 the 1st transaction in the filtered list is edited.
 
 * Steps:
@@ -248,7 +238,7 @@ the 1st transaction in the filtered list is edited.
 image::homeUG/HomeEditStep1cr.png[]
 
 [NOTE]
-Similar to the Add Command, there is no restriction to the number of characters allowed for the description and
+Similar to the Add command, there is no restriction to the number of characters allowed for the description and
 category.
 
 [start = 2]
@@ -260,9 +250,10 @@ Leo will respond with a success message and the updated transaction will be show
 image::homeUG/HomeEditStep2cr.png[]
 
 
-If the person entered into the command is not found in the Members tab, Leo will respond to inform you which is similar to <<NoSuchPerson, Add Command>>.
+If the person entered into the command is not found in the Members tab, Leo will respond to inform you which is similar to <<NoSuchPerson, Add command>>.
+In addition, if there is no matching transactions, en empty table will be shown.
 
-==== To Sort Transactions in the Home Tab
+==== To Sort Transactions in Different Orders
 This command enables you to sort the table of transactions into a specified order for viewing and carrying out of subsequent commands.
 
 * To sort:
@@ -273,16 +264,16 @@ This command enables you to sort the table of transactions into a specified orde
 
 * Examples:
 ** [blue]`find Alex` +
-[blue]`sort date` - Sorts both the results of the [blue]`find` command shown and the actual transaction list. The Find Command is detailed
-in <<findCommandHome, Section 5.1.5. To Find Transactions that Match Keywords in the Home Tab>>. To view the full sorted list,
+[blue]`sort date` - Sorts both the results of the [blue]`find` command shown and the actual transaction list. The Find command is detailed
+in <<findCommandHome, Section 5.1.5. To Find Transactions that Match Keywords in the Home tab>>. To view the full sorted list,
 enter [blue]`back` command which is detailed in <<homeBackCommand, Section 5.1.6. To Go Back to Display the Full List in the Home Tab>>
 
 
 [NOTE]
-The undo sort command allows you to view the table of transactions in the order originally shown when the application was initially opened.
+The Undo Sort command allows you to view the table of transactions in the order originally shown when the application was initially opened.
 
 * Steps
-1. Type the any one of the above command in blue font into the command box.
+1. Type any one of the above commands in blue font into the command box.
 
 2. Hit `Enter`. The table will now be sorted in the specified order for you.
 
@@ -292,7 +283,7 @@ This command transactions matching the specified keywords for viewing and for ca
 based on the filtered table of transactions shown. The subsequent commands will include: delete, edit and sort.
 
 [NOTE]
-An add command after a find command will cause the table to show all transactions. A find command will always
+An Add command after a Find command will cause the table to show all transactions. A Find command will always
 find from the full list transactions and show the results.
 
 * Command:
@@ -333,7 +324,7 @@ image::homeUG/HomeFindStep2.png[width = "700"]
 
 [start = 3]
 3. Key in [blue]`back` and hit `Enter` to return to the table of all transactions, or enter your next command to be executed.
-The screenshot below shows the Edit Command being input as the next command:
+The screenshot below shows the Edit command being input as the next command:
 
 //.Screenshot of the user input for Edit Command according to filtered table's ID in Home Tab
 image::homeUG/HomeFindStep3cr.png[]
@@ -341,12 +332,12 @@ image::homeUG/HomeFindStep3cr.png[]
 
 The table will continue to show the filtered table with the transaction edited according to the command, shown in the screenshot above.
 [NOTE]
-If an Add Command is entered, the table will automatically reverse back to the previous view to show the full list of all transactions.
+As mentioned, if an Add command is entered, the table will automatically reverse back to the previous view to show the full list of all transactions.
 All other commands require you to input [blue]`back` to return to the full list of all transactions.
 
 The screenshot below shows the table after entering [blue]`back` which shows all the transactions in the table again:
 
-.Screenshot of the user input for Back Command after entering Find Command in Home Tab
+//.Screenshot of the user input for Back command after entering Find command in Home Tab
 image::homeUG/HomeFindStep3Back.png[width="700"]
 
 [[homeBackCommand]]
@@ -355,7 +346,7 @@ This command helps you to display the full transaction list after Find Commands.
 before entering the Back Command to display the full list.
 
 [NOTE]
-There is no need for you to enter a Back Command after an Add Command since the Add Command automatically resets the
+There is no need for you to enter a Back command after an Add Command since the Add command automatically resets the
 table to show the full list of transactions.
 
 * Command: [blue]`back`
@@ -366,8 +357,8 @@ table to show the full list of transactions.
 
 === Members Tab
 
-==== Add a Person
-This command allows you to add a person to the database.
+==== To Add a Person
+The Add command allows you to add a person or member to the database.
 
 * Command:
 `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]...`
@@ -380,14 +371,14 @@ A person can have any number of tags (including 0).
 ** [blue]`add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01`
 ** [blue]`add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison p/1234567 t/criminal`
 
-==== List all Persons
-This command shows you a list of all persons in the database.
+==== To List All Persons
+The List command shows you a list of all persons in the database.
 
 * Command:
 [blue]`list`
 
-==== Edit a Person
-This command enables you to edit an existing person in the database at a specified index.
+==== To Edit a Person
+The Edit command enables you to edit an existing person in the database at a specified index.
 
 * Command:
 `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
@@ -405,8 +396,8 @@ This command enables you to edit an existing person in the database at a specifi
 ** [blue]`edit 1 p/91234567 e/johndoe@example.com` - Edits the phone number and email address of the 1st person to be `91234567` and `johndoe@example.com` respectively.
 ** [blue]`edit 2 n/Betsy Crower t/` - Edits the name of the 2nd person to be `Betsy Crower` and clears all existing tags.
 
-==== Locating Persons by Name
-This command enables you to find every person whose name contain any of the inputted keywords.
+==== To Locate Persons by Name
+The Find command enables you to find every person whose name contain any of the inputted keywords.
 
 * Command:
 `find KEYWORD [MORE_KEYWORDS]`
@@ -425,8 +416,8 @@ This command enables you to find every person whose name contain any of the inpu
 ** [blue]`find Betsy Tim John` - Returns any person having names `Betsy`, `Tim`, or `John`
 
 // tag::delete[]
-==== Deleting a Person
-This command enables you to delete the specified person from the database.
+==== To Delete a Person
+The Delete command enables you to delete the specified person from the database.
 
 * Command:
 `delete INDEX`
@@ -476,7 +467,8 @@ for their expenditure.
 This command allows you to add a deadline to a person's reimbursement.
 
 [WARNING]
-You can set the deadline as any day you want. It is your responsibility to set a reasonable deadline.
+You can set the deadline as any valid day you want.
+It is your responsibility to set a reasonable deadline.
 
 * Command: `deadline p/NAME dt/dd-mmm-yyyy`
 * Example: [blue]`deadline p/Alex Yeoh dt/19-Dec-2019`
@@ -484,17 +476,17 @@ You can set the deadline as any day you want. It is your responsibility to set a
 * Steps:
 
 . Type the command with all parameters filled in, as shown in the screenshot below:
-
++
 //.Screenshot of the user input into Command Box for Deadline Command in Reimbursement Tab
 image::Reimbursement/ReimbursementDeadlineCommand.png[width="600"]
 
-[start = 2]
++
 . Hit `Enter`
-
++
 If the deadline is successfully added, Leo will respond with a success message and the
 deadline will now show for the specified person's reimbursement. +
 Otherwise, Leo will show an error message indicating that the person is not in the reimbursement list.
-
++
 //.Screenshot of a successful user input for Deadline Command in Reimbursement Tab
 image::Reimbursement/ReimbursementDeadlineCommandSuccess.png[width="600"]
 
@@ -521,16 +513,16 @@ This command allows you to find the reimbursement for a specified person.
 * Steps:
 
 . Type the command, along with the person's name you'd like to find into command box:
-
++
 //.Screenshot of the user input into Command Box for Find Command in Reimbursement Tab
 image::Reimbursement/ReimbursementFindCommand.png[width="600"]
 
-[start = 2]
++
 . Hit `Enter`
-
++
 Leo will respond with a success message and the tab will show the person's corresponding reimbursement, if it exists. +
 Otherwise, Leo will show an error message indicating that the person is not in reimbursement list.
-
++
 //.Diagram of successful find command in reimbursement tab
 image::Reimbursement/ReimbursementFindCommandSuccess.png[width="600"]
 
@@ -541,25 +533,25 @@ This command helps you to display the full reimbursement list after `find` and `
 
 * Steps:
 . Type [blue]`back` into the Command Box
-
++
 //.Screenshot of the user input into the Command Box for Back Command in Reimbursement Tab
 image::Reimbursement/ReimbursementBackCommand.png[width="600"]
 
-[start = 2]
++
 . Hit `Enter`
-
++
 The tab will now show the full reimbursement list.
 
-
++
 //.Screenshot of a successful user input for Back Command in Reimbursement Tab
 image::Reimbursement/ReimbursementBackCommandSuccess.png[width="600"]
 
-==== Marking a Command as Done
+==== Marking a Reimbursement as Done
 This command helps you to mark a reimbursement as done and remove it from reimbursement list.
 
 [NOTE]
-Transactions not shown in the Reimbursement Tab are already marked as done. +
-No indication will be shown in the Transaction Tab.
+Reimbursements only take transactions that have not been paid. +
+The reimbursement status is not shown in the transaction tab.
 
 * Command: `done p/NAME`
 * Example: [blue]`done p/Alex Yeoh`
@@ -568,16 +560,16 @@ No indication will be shown in the Transaction Tab.
 . Type the command, along with the person's name whose reimbursement is to be marked as done,
 as shown in the screenshot below:
 
-
++
 //.Screenshot of the user input into Command Box for Done Command in Reimbursement Tab
 image::Reimbursement/ReimbursementDoneCommand.png[width="600"]
 
-[start = 2]
++
 . Hit `Enter`
-
++
 The reimbursement for that person will be removed from the tab, as shown below:
 
-
++
 //.Screenshot of a successful user input for Done Command in Reimbursement Tab
 image::Reimbursement/ReimbursementDoneCommandSuccess.png[width="600"]
 
@@ -590,17 +582,17 @@ This command helps you to sort the reimbursement lists based on amount, in desce
 * Steps:
 . Type the command [blue]`sort amount`, as shown in the screenshot below:
 
-
++
 //.Screenshot of the user input into Command Box for Sort Amount Command in Reimbursement Tab
 image::Reimbursement/ReimbursementSortAmountCommand.png[width="600"]
 
 
-[start = 2]
++
 . Hit `Enter`
-
++
 The reimbursements are sorted in descending order of the amount.
 
-
++
 //.Screenshot of a successful user input for Sort Amount Command in Reimbursement Tab
 image::Reimbursement/ReimbursementSortAmountCommandSuccess.png[width="600"]
 
@@ -611,16 +603,16 @@ This command helps you to sort the reimbursement lists based on name, in alphabe
 
 * Steps:
 . Type the command [blue]`sort name`, as shown in the screenshot below:
-
-//.Screenshot of the user input into Command Box for Sort Name Command in Reimbursement Tab
++
+//.Screenshot of the user input into Command Box for Sort Name Command in Reimbursement tab
 image::Reimbursement/ReimbursementSortNameCommand.png[width="600"]
 
-[start = 2]
++
 . Hit `Enter`
-
++
 The reimbursements are sorted in alphabetical order of person's name.
-
-//.Screenshot of a successful user input for Sort Name Command in Reimbursement Tab
++
+//.Screenshot of a successful user input for Sort Name Command in Reimbursement tab
 image::Reimbursement/ReimbursementSortNameCommandSuccess.png[width="600"]
 
 ==== Sorting the list based on deadline: `sort date`
@@ -630,16 +622,16 @@ This command helps you to sort the reimbursement lists based on deadline, in ord
 
 * Steps:
 . Type the command [blue]`sort date `, as shown in the screenshot below:
-
-//.Screenshot of the user input into Command Box for Sort Date Command in Reimbursement Tab
++
+//.Screenshot of the user input into Command Box for Sort Date Command in Reimbursement tab
 image::Reimbursement/ReimbursementSortDateCommand.png[width="600"]
 
-[start = 2]
++
 . Hit `Enter`
-
++
 The reimbursements are sorted by deadline date.
-
-//.Screenshot of a successful user input for Sort Date Command in Reimbursement Tab
++
+//.Screenshot of a successful user input for Sort Date Command in Reimbursement tab
 image::Reimbursement/ReimbursementSortDateCommandSuccess.png[width="600"]
 
 === Inventory Tab
@@ -675,7 +667,7 @@ The attributes can also be inputted in any order.
 * Steps:
 . Type the command with all parameters filled in, as shown in the screenshot below:
 
-//.Screenshot of the user input into the Command Box for the Add Command in the Inventory Tab
+//.Screenshot of the user input into the Command Box for the Add Command in the Inventory tab
 image::inventoryUG/AddStep1.png[width="600"]
 
 [start = 2]
@@ -684,7 +676,7 @@ image::inventoryUG/AddStep1.png[width="600"]
 If the command is successfully added, Leo will respond with a success message and the item
 will be shown in the table. This is shown in the screenshot below:
 
-//.Screenshot of a successful user input for the Add Command in the Inventory Tab
+//.Screenshot of a successful user input for the Add Command in the Inventory tab
 image::inventoryUG/AddSuccess.png[width="600"]
 
 [NOTE]
@@ -712,7 +704,7 @@ image::inventoryUG/DeleteStep1.png[width="600"]
 Leo will respond with a success message and the item will be removed from the table as shown below:
 
 
-//.Screenshot of a successful user input for the Delete Command in the Inventory Tab
+//.Screenshot of a successful user input for the Delete Command in the Inventory tab
 image::inventoryUG/DeleteSuccess.png[width="600"]
 
 ==== Edit an Item:
@@ -731,7 +723,7 @@ You may edit any combination, permutation and number of the attributes, as long 
 * Steps:
 . Type the command with the ID of the item to be edited, along with the new parameters to be changed, as shown below:
 
-//.Screenshot of user input into Command Box for the Edit Command in the Inventory Tab
+//.Screenshot of user input into Command Box for the Edit Command in the Inventory tab
 image::inventoryUG/EditStep1.png[width="600"]
 
 [start = 2]
@@ -739,7 +731,7 @@ image::inventoryUG/EditStep1.png[width="600"]
 
 Leo will respond with a success message and the updated item will be shown in the table as shown below:
 
-//.Screenshot of a successful user input for the Edit Command in the Inventory Tab
+//.Screenshot of a successful user input for the Edit Command in the Inventory tab
 image::inventoryUG/EditSuccess.png[width="600"]
 
 ==== Sort Items:
@@ -773,6 +765,8 @@ update of items.
 the inventory.
 * After every checkout, the sales made will be recorded as one transaction which will be then labelled as "Items sold"
 under the category "Sales" and person will be the cashier-in-charge. The Home tab will be updated with this transaction.
+* Once there are items on the cart, `Cashier Mode` will automatically be turned on. When `Cashier Mode` is turned on, you cannot
+make any modification to existing items in the inventory except for the adding of new items.
 
 [NOTE]
 Items with zero price are not available for sale. Such items cannot be added into the table.
@@ -780,6 +774,9 @@ Items with zero price are not available for sale. Such items cannot be added int
 [WARNING]
 Due to size limitation, you will not be allowed to add any items into the table if the total amount exceeds $999999.99. You
 are advised to reduce the quantity of items or checkout separately in another cart.
+
+[NOTE]
+The description is case-insensitive. Regardless of the case, as long as the description matches, it can be added to the cart.
 
 ====
 
@@ -789,10 +786,9 @@ This command enables you to add a sales item into the table.
 * Command:
 `add [c/CATEGORY] d/DESCRIPTION q/QUANTITY`
 
-The quantity that you input must be less than or equal to the stock available in the Inventory Tab.
-Else, Leo will display a message prompting input of a smaller quantity or another item. +
+The quantity that you input must be less than or equal to the stock available in the Inventory tab.
 The category field is optional. If you are unsure about the description of the desired item, you can refer to
-the Inventory Tab or simply key in the category without any other fields. Leo will display all the items in the
+the Inventory tab or simply key in the category without any other fields. Leo will display all the items in the
 specified category that are available for sale.
 
 If you input a description of an item that already exists in the inventory, the quantity inputted will be added to
@@ -801,7 +797,7 @@ the existing quantity. If the total quantity exceed the stock available, the sys
 Additionally, if the description is misspelled or does not match any of the items in the inventory, Leo will recommend
 items with similar description that you might be looking for.
 
-Examples:
+* Examples:
 
 ** [blue]`add c/food` - Displays all items that are under the 'food' category in the response box
 ** [blue]`add c/stationary d/pancake q/3` - Adds 3 similar items which have the description "pancake"
@@ -818,26 +814,21 @@ according to the mistyped description.
 If both category and description are specified and valid, the system will allow the item to be added according the
 description even if the category of the item does *not* match with the specified category inputted.
 
+* Steps:
 
-
-Steps:
-
-1. Type the command with a category specified as shown in the screenshot below:
-
-//.Screenshot of user input (category) into Command Box for Add Command in Cashier Tab
-image::cashierUG/AddCommand1.png[width="620"]
-
-
+1. If you do not remember the exact description of the item to add, you can type the command "add" with a category
+specified as shown in the screenshot below.
++
+image::cashierUG/AddCommand1.png[width=600"]
++
 [start = 2]
-2. Enter the desired description and quantity according to the items suggested by Leo as shown below:
-
-//.Screenshot of the user input (description, quantity) into Command Box for Add Command in Cashier Tab
+2. Then, you can enter the desired description and quantity according to the items suggested by Leo as shown below.
++
 image::cashierUG/AddCommand2.png[width="600"]
-
++
 [start = 3]
-. Hit `Enter`
-
-//.Screenshot of the response message for Add Command in Cashier Tab
+3. Now, you can hit `Enter`.
++
 image::cashierUG/AddCommand3.png[width="600"]
 
 Leo will respond to the successful addition with a response message. The newly added item will be shown on the table.
@@ -855,16 +846,13 @@ The specified index should correspond to the row index of the item in the table.
 [blue]`delete 2` - Deletes an item in row 2 of the table
 
 * Steps:
-
-1. Type the command with an index specified as shown in the screenshot below:
-
-//.Screenshot of the user input into Command Box for Delete Command in Cashier Tab
+1. To delete an item, type the command "delete" with an index specified as shown in the screenshot below.
++
 image::cashierUG/DeleteCommand1.png[width="600"]
-
++
 [start = 2]
-. Hit `Enter`
-
-//.Screenshot of the response message for Delete Command in Cashier Tab
+2. Now, you can hit `Enter`.
++
 image::cashierUG/DeleteCommand2.png[width="600"]
 
 Leo will respond to the successful deletion with a response message. The item will be deleted from the table.
@@ -873,7 +861,7 @@ Leo will respond to the successful deletion with a response message. The item wi
 ==== Edit the Quantity of a Sales Item
 This command allows you to edit the quantity of a sales item that already exists in the table.
 
-* Command:
+* Commands:
 
 ** `edit d/DESCRIPTION q/QUANTITY`
 ** `edit i/INDEX q/QUANTITY`
@@ -894,24 +882,21 @@ If the quantity is invalid, Leo will display the quantity of stock left.
 
 * Steps:
 
-1.1 To edit by *index*, enter the command with an index and quantity specified as shown in the screenshot below:
+1.1 To edit by its *index*, you can enter the command "edit" with an index and quantity specified as shown in the screenshot below.
 
-//.Screenshot of user input (index, description) into Command Box for Edit Command in Cashier Tab
 image::cashierUG/EditCommand1.png[width="600"]
 
 [start = 2]
-1.2. To edit by *description*, enter the required description and quantity as shown below:
+1.2 To edit by its *description*, you can enter the command "edit"  with the required description and quantity as shown below.
 
-//.Screenshot of user input (description, quantity) into Command Box for Edit Command in Cashier Tab
 image::cashierUG/EditCommand3.png[width="600"]
 
 [start = 2]
-. Hit `Enter`
+2. Now, you can hit `Enter`.
 
-//.Screenshot of response message for Edit Command in Cashier Tab
 image::cashierUG/EditCommand2.png[width="600"]
 
-If successfully updated, Leo will respond with a response message. The quantity will then be updated in the table.
+If successfully updated, Leo will respond with a response message. The quantity will now be updated in the table.
 
 
 ==== Set the Cashier-In-Charge
@@ -920,8 +905,8 @@ This command enables you to set the cashier whom is in-charge of the sales.
 * Command:
 `cashier NAME`
 
-The person to be set as the cashier must be an existing member of the club. This means that their details must be found on the Members Tab. +
-If you have yet to record the cashier as a member, please proceed to Members Tab
+The person to be set as the cashier must be an existing member of the club. This means that their details must be found on the Members tab. +
+If you have yet to record the cashier as a member, please proceed to Members tab
 to register him/her as a member before executing this command.
 
 [NOTE]
@@ -932,16 +917,13 @@ This step must be executed before checking out. Else, checkout cannot proceed.
 ** [blue]`cashier David Li` - Sets David Li as a cashier
 
 * Steps:
-
-1. Type the command with the cashier's name specified as shown in the screenshot below:
-
-//.Screenshot of user input into Command Box for Set Cashier Command in Cashier Tab
+1. To set a cashier, type the command "cashier" with the cashier's name specified as shown in the screenshot below.
++
 image::cashierUG/SetCashierCommand1.png[width="600"]
-
++
 [start = 2]
-. Hit `Enter`
-
-//.Screenshot of response message for Set Cashier Command in Cashier Tab
+2. Now, you can hit `Enter`.
++
 image::cashierUG/SetCashierCommand2.png[width="600"]
 
 If set successfully, Leo will respond with a response message. The cashier will be updated in the bottom row.
@@ -954,8 +936,8 @@ This command enables you to perform a checkout of all the sales items in the tab
 `checkout AMOUNT_PAID_BY_CUSTOMER`
 
 The amount inputted should be the amount that the customer will be paying. This amount must be greater than or equal to the
-total amount listed on the bottom row of the table. If the amount paid is greater than the total amount, Leo will display
-the amount of change that the cashier should return.
+total amount listed on the bottom row of the table. If the amount paid is valid, Leo will display
+the total amount and the change that the cashier should return.
 
 After checking out, all items in the table will be cleared and the cashier will be reset.
 
@@ -968,32 +950,31 @@ You must set the cashier before checking out. Else, checkout cannot proceed.
 
 * Steps:
 
-1. Type the command and specify the amount that the customer is paying as shown in the screenshot below:
-
-//.Screenshot of user input into Command Box for Checkout Command in Cashier Tab
+1. To checkout, you can type in the command "checkout" and specify the amount that the customer is paying as
+shown in the screenshot below.
++
 image::cashierUG/CheckoutCommand1.png[width="600"]
-
++
 [start = 2]
-. Hit `Enter`
-
-//.Screenshot of response message for Checkout Command in Cashier Tab
+2. Now, you can hit `Enter`.
++
 image::cashierUG/CheckoutCommand2.png[width="600"]
 
 
 If checkout is successful, Leo will respond with a response message. The table will be cleared and the cashier will be reset. +
-The `Home Tab` will be updated with this transaction and the remaining stock in the `Inventory Tab` will also be updated.
+The Home tab will be updated with this transaction and the remaining stock in the Inventory tab will also be updated.
 
 
 ==== Clears All the Sales Items in the Table
 This command clears all the sales item in the table.
 
-* Command format:
+* Command:
 [blue]`clear`
 
 After clearing, the cashier will be reset as well.
 
 [NOTE]
-This command enables you to disable the `Cashier Mode` footnote:[`Cashier Mode` automatically turns on when the table in the `Cashier Tab`
+This command enables you to disable the `Cashier Mode` footnote:[`Cashier Mode` automatically turns on when the table in the Cashier tab
 is not empty. While the `Cashier Mode` is turned on, any modification to the inventory is prohibited except addition of items.].
 
 [CAUTION]
@@ -1005,17 +986,16 @@ This command is irreversible. Please use at your own discretion.
 
 * Steps:
 
-1. Type only the "clear" command word as shown in the screenshot below:
-
+1. To clear, you can type the "clear" command word only as shown in the screenshot below.
++
 //.Screenshot of user input into Command Box for Clear Command in Cashier Tab
 image::cashierUG/ClearCommand1.png[width="600"]
-
++
 [start = 2]
-. Hit `Enter`
-
+2. Now, you can hit `Enter`.
++
 //.Screenshot of response message for Clear Command in Cashier Tab
 image::cashierUG/ClearCommand2.png[width="600"]
-
 
 If cleared successful, Leo will respond with a response message. The table will also be cleared and the cashier
 will be reset.
@@ -1059,19 +1039,19 @@ This command enables you to set a financial goal.
 
 [NOTE]
 The amount should be non-negative, and the maximum amount you may set is 10,000,000
-(10 million). +
+(10 million). If more than 2 decimal places are specified, the amount will be rounded to 2 decimal places. +
 To reset the goal, simply set it to 0.
 
 * Steps:
 . Type the command with the corresponding target and amount.
 
-//.Screenshot of user input into Command Box for Set Command in Overview Tab
+//.Screenshot of user input into Command Box for Set Command in Overview tab
 image::overviewUG/SetCommandExample.png[width="600"]
 
 [start = 2]
 . Hit `Enter`
 
-//.Screenshot of a successful user input for Set Command in Overview Tab
+//.Screenshot of a successful user input for Set Command in Overview tab
 image::overviewUG/SetCommandResult.png[width="600"]
 
 Leo displays a confirmation showing that the goal was successfully set. +
@@ -1082,21 +1062,18 @@ This command allows you to set a percentage threshold for notifications. +
 For example, an 80 percent threshold will mean that you will receive a notification once you have reached 80% of the
 goal set for that particular financial goal.
 
-[NOTE]
-
-
 * Command:
 ** To set budget goal notification: `notify b/PERCENTAGE`
 ** To set expense goal notification: `notify e/PERCENTAGE`
 ** To set sales goal notification: `notify s/PERCENTAGE`
 
 * Examples:
-** To set budget goal notification: [blue]`notify b/PERCENTAGE`
-** To set expense goal notification: [blue]`notify e/PERCENTAGE`
-** To set sales goal notification: [blue]`notify s/PERCENTAGE`
+** To set budget goal notification: [blue]`notify b/80`
+** To set expense goal notification: [blue]`notify e/80`
+** To set sales goal notification: [blue]`notify s/80`
 
 [NOTE]
-The percentage value should be a value from 0 - 100. +
+The percentage value should be a whole number from 0 - 100. +
 This feature will not work if no goals have previously been set with the `set` command, or if the goal is currently
 set to 0. +
 To disable notifications for a particular financial goal, simply set its notifications threshold to 0.
@@ -1104,13 +1081,13 @@ To disable notifications for a particular financial goal, simply set its notific
 * Steps:
 . Type the command with the corresponding target and amount.
 
-//.Screenshot of user input into Command Box for Notify Command in Overview Tab
+//.Screenshot of user input into Command Box for Notify Command in Overview tab
 image::overviewUG/NotifyCommandExample.png[width="600"]
 
 [start = 2]
 . Hit `Enter`
 
-//.Screenshot of a successful user input for Notify Command in Overview Tab
+//.Screenshot of a successful user input for Notify Command in Overview tab
 image::overviewUG/NotifyCommandResult.png[width="600"]
 
 Leo displays a confirmation showing that the notification was successfully set. +
@@ -1123,7 +1100,7 @@ Notifications show only once per app run, or whenever a target or threshold is m
 
 The following screenshot shows an example of the notifications:
 
-//.Screenshot of notifications displayed by Leo for Notify Command in Overview Tab
+//.Screenshot of notifications displayed by Leo for Notify Command in Overview tab
 image::overviewUG/NotificationExample.png[width="600"]
 
 === Saving the data
@@ -1143,9 +1120,9 @@ Data in treasurerPro is saved automatically after executing any command. There i
 
 *Q*: What is `Cashier Mode`? How can I switch it off? +
 *A*: `Cashier Mode` is a feature implemented for security reasons. It is considered turned on when there are sales items
-in the cart on the `Cashier Tab`. While on `Cashier Mode`, any modification to the inventory is prohibited except adding of
-items. +
-To switch it off, please enter `clear` on the Command Line Interface (CLI) of the `Cashier Tab`.
+in the cart on the Cashier tab. While on `Cashier Mode`, any modification to the inventory is prohibited except adding of
+new items. +
+To switch it off, please enter `clear` on the Command Line Interface (CLI) of the Cashier tab.
 
 == Command Summary
 
